--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Харківський фізико-математично науковий ліцей №27</title>
-<body style="font-family:sans-serif">
+<body style="font-family:sans-serif;">
     <header style="background-color:lightblue">
     <img src="https://learn.logikaschool.com/uploads/student/5810152/68331abd130f7.gif" height="50px" wight="50px">
     <a href="https://pml27.klasna.com/" >Більше тут</a>
@@ -10,6 +10,7 @@
     <a href="#fact" style="text-align:center">Цікаві факти</a>
     <p>Комунальний заклад <b><i>«Харківський фізико-математичний науковий ліцей № 27 Харківської міської ради Харківської області»</i></b> — відома харківська школа з фізико-математичним ухилом. Розташовується в старовинній будівлі XIX століття. За 100 років неодноразово змінювалось призначення будівлі, також змінювались напрямки діяльності — від торгової школи до військових курсів. Статус ліцею установі було присвоєно в 1990 році.
     На 2011 рік фонд бібліотеки налічував понад 21 тисячу примірників, із них близько 12 тисяч — підручники. Крім того є велика кількість брошур, карт, плакатів, відеоматеріалів. Щорічно ліцей виписує кілька десятків найменувань газет і журналів, як для навчального процесу, так і для різнобічного розвитку особистості.</p>
+    <p>Учні ліцею мають гарні результати на предметних олімпіадах. Так, тільки за 2008 рік 17 учнів ліцею стали переможцями Всеукраїнських олімпіад, двоє учнів стали призерами Міжнародної олімпіади з фізики. У тому ж році сім учнів ліцею отримали стипендію президента України. У 2010 році понад 20 учнів ліцею стали переможцями Всеукраїнських математичних олімпіад. Всього за час роботи ліцею з 1992 по 2011 рік його учні отримали на міжнародних олімпіадах (в основному фізичних і математичних) близько трьох десятків медалей, в тому числі і найвищі.</p>
     <h2 id="fact">Цікаві факти</h2>
     <p>1)Класи у паралелі позначаються не буквами,а цифрами. Наприклад 6-1(те саме що й 6-А)</p>
     <p>2)Ліцей випачує стипендію працьовитим учням</p>
